// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should display default not found text if data is empty 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table table-striped"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th>
          ID
        </th>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Phone
        </th>
        <th>
          Address
        </th>
        <th>
          City
        </th>
        <th>
          State
        </th>
        <th>
          ZipCode
        </th>
        <th>
          Gender
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="text-center"
          colSpan={10}
        >
          No Results Found
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should display list 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table table-striped"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th>
          ID
        </th>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Phone
        </th>
        <th>
          Address
        </th>
        <th>
          City
        </th>
        <th>
          State
        </th>
        <th>
          ZipCode
        </th>
        <th>
          Gender
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          className="align-middle"
          scope="row"
        >
          ALTI123456
        </th>
        <td
          className="align-middle"
        >
          Test User #1
        </td>
        <td
          className="align-middle"
        >
          test+1@altimetric.com
        </td>
        <td
          className="align-middle"
        >
          9876543210
        </td>
        <td
          className="align-middle"
        >
          Kudlu Gate
        </td>
        <td
          className="align-middle"
        >
          Bangalore
        </td>
        <td
          className="align-middle"
        >
          Karnataka
        </td>
        <td
          className="align-middle"
        >
          560068
        </td>
        <td
          className="align-middle"
        >
          Male
        </td>
        <td
          className="align-middle"
        >
          <div>
            <i
              className="fas fa-edit"
            />
            <i
              className="fas fa-trash"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should display not found text if data is empty 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table table-striped"
  >
    <thead
      className="thead-light"
    >
      <tr>
        <th>
          ID
        </th>
        <th>
          Name
        </th>
        <th>
          Email
        </th>
        <th>
          Phone
        </th>
        <th>
          Address
        </th>
        <th>
          City
        </th>
        <th>
          State
        </th>
        <th>
          ZipCode
        </th>
        <th>
          Gender
        </th>
        <th>
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="text-center"
          colSpan={10}
        >
          No Employees Found
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
